--- a/src/app/(default)/_components/Hamburger/Hamburger.module.css
+++ b/src/app/(default)/_components/Hamburger/Hamburger.module.css
@@ -13,7 +13,7 @@
   transition: all 0.5s ease;
   transition-behavior: allow-discrete;
 
-  [data-mantine-color-scheme="dark"] {
+  @mixin dark {
     background-color: var(--mantine-color-teal-8);
   }
 
