--- a/src/app/(default)/games/[game_id]/config/_components/Config/Config.module.css
+++ b/src/app/(default)/games/[game_id]/config/_components/Config/Config.module.css
@@ -8,7 +8,7 @@
     background-color: var(--mantine-color-gray-1);
     border-right: 1px solid transparent;
 
-    [data-mantine-color-scheme="dark"] {
+    @mixin dark {
       color: var(--mantine-color-gray-1);
       background-color: var(--mantine-color-gray-8);
     }
@@ -24,7 +24,7 @@
   border: 1px solid var(--mantine-color-gray-3);
   border-left: 1px solid transparent;
 
-  [data-mantine-color-scheme="dark"] {
+  @mixin dark {
     background-color: var(--mantine-color-gray-8);
     border: 1px solid var(--mantine-color-gray-7);
     border-left: 1px solid transparent;
