--- a/src/app/(default)/online/games/[game_id]/config/_components/ConfigTabs/ConfigTabs.module.css
+++ b/src/app/(default)/online/games/[game_id]/config/_components/ConfigTabs/ConfigTabs.module.css
@@ -9,7 +9,7 @@
   & button {
     color: var(--mantine-color-gray-7);
 
-    [data-mantine-color-scheme="dark"] & {
+    @mixin dark & {
       color: var(--mantine-color-gray-3);
     }
   }
@@ -20,7 +20,7 @@
     background-color: var(--mantine-color-gray-1);
     border-bottom: 1px solid transparent;
 
-    [data-mantine-color-scheme="dark"] & {
+    @mixin dark & {
       color: var(--mantine-color-gray-1);
       background-color: var(--mantine-color-gray-8);
     }
@@ -30,7 +30,7 @@
   & button[role="tab"]:hover:not([aria-current="page"]) {
     color: var(--mantine-color-gray-9);
 
-    [data-mantine-color-scheme="dark"] & {
+    @mixin dark & {
       color: var(--mantine-color-gray-1);
     }
   }
@@ -44,7 +44,7 @@
   border: 1px solid var(--mantine-color-gray-3);
   border-top: 1px solid transparent;
 
-  [data-mantine-color-scheme="dark"] {
+  @mixin dark {
     background-color: var(--mantine-color-gray-8);
     border: 1px solid var(--mantine-color-gray-7);
     border-top: 1px solid transparent;
